--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@
                 <div class="col is-6">
 
                     <h3>Links</h3>
-                    <sgds-alert alertClasses="d-flex align-items-center" variant="danger" dismissible show>
+                    
+                    <sgds-alert  variant="danger" dismissible show>
                         <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-1-circle-fill" viewBox="0 0 16 16">
                             <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM9.283 4.002H7.971L6.072 5.385v1.271l1.834-1.318h.065V12h1.312V4.002Z"/>
                           </svg>
@@ -305,22 +306,32 @@
 
                         <h3>With additional content</h3>
 
-                        <sgds-alert variant="success" alertClasses="d-flex align-items-center" dismissible>
-                            <sl-icon name="info-circle" class="flex-shrink-0 me-4 align-self-start mt-2"></sl-icon>
-                            <div><h4 class="alert-heading">Hey, nice to see you</h4>
-                            
+                        <sgds-alert variant="success" show>
+                            <svg
+                              slot="icon"
+                              xmlns="http://www.w3.org/2000/svg"
+                              width="16"
+                              height="16"
+                              fill="currentColor"
+                              class="bi bi-info-circle"
+                              viewBox="0 0 16 16"
+                            >
+                              <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                              <path
+                                d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+                              />
+                            </svg>
+                            <div>
+                              <sgds-alert-heading headerTag=${args.headerTag}>Hello, nice to meet you</sgds-alert-heading>
                               <p>
-                                Aww yeah, you successfully read this important alert message. This
-                                example text is going to run a bit longer so that you can see how
-                                spacing within an alert works with this kind of content.
+                                Aww yeah, you successfully read this important
+                                <sgds-alert-link href=${args.href} target=${args.target}>alert message</sgds-alert-link>. This example text is
+                                going to run a bit longer so that you can see how spacing within an alert works with this kind of content.
                               </p>
                               <hr />
-                              <p className="mb-0">
-                                Whenever you need to, be sure to use margin utilities to keep things
-                                nice and tidy.
-                              </p>
+                              <p>Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
                             </div>
-                        </sgds-alert>
+                          </sgds-alert>
                 </div>
             </div>
         </div>
