--- a/index.html
+++ b/index.html
@@ -106,14 +106,13 @@
 <body class="d-flex flex-column min-vh-100"></body>
     <sgds-masthead fluid></sgds-masthead>  
     <div class="grid">
-      <sgds-scoped-button>hello`</sgds-scoped-button>
     <sgds-mainnav>
         <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand" />
         <sgds-mainnav-item href="#">Home</sgds-mainnav-item>
         <sgds-mainnav-item href="#">About</sgds-mainnav-item>
         <sgds-mainnav-item href="#" slot="end" class="test test2">Info</sgds-mainnav-item>
         <sgds-mainnav-item href="#" slot="end">Contact Us</sgds-mainnav-item>
-        <sgds-mainnav-dropdown togglerText="Dropdown" menuIsOpen close="inside">
+        <sgds-mainnav-dropdown togglerText="Dropdown" menuIsOpen>
             <sgds-dropdown-item href="https://google.com">Item 1</sgds-dropdown-item>
             <sgds-dropdown-item href="#">Item 2</sgds-dropdown-item>
             <sgds-dropdown-item href="#">Item 3</sgds-dropdown-item>
@@ -149,6 +148,13 @@
 
     <main>
         <div class="container">
+            <sgds-combo-box>
+                <sgds-dropdown-item>item #1 (argsTable controlled)</sgds-dropdown-item>
+                <sgds-dropdown-item href="https://google.com">item #2</sgds-dropdown-item>
+                <sgds-dropdown-item href="#" disabled>
+                  item #3
+                </sgds-dropdown-item>
+            </sgds-combo-box>
             <h2>Breadcrumb</h2>
             <sgds-breadcrumb>
                 <span slot="separator"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-slash-square" viewBox="0 0 16 16">
@@ -489,7 +495,7 @@
             <div class="container">
                 <h2>Dropdown</h2>
                 <div class="row">
-                    <sgds-dropdown togglerText="Dropdown" menuIsOpen close="inside">
+                    <sgds-dropdown togglerText="Dropdown" menuIsOpen>
                         <sgds-dropdown-item>item #1 (argsTable controlled)</sgds-dropdown-item>
                         <sgds-dropdown-item href="https://google.com">item #2</sgds-dropdown-item>
                         <sgds-dropdown-item href="#" disabled>
